Created Alarm Clock Project

--- a/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
+++ b/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
@@ -1,3 +1,4 @@
+<!-- sldsValidatorIgnore -->
 <template>
 	<div class="app slds-var-p-around_medium">
 		<div class="box">
@@ -13,7 +14,6 @@
 						onclick={recalculate}>Re-Calculate</button>
 				</section>
 			</template>
-
 			<template if:false={result}>
 				<form onsubmit={submitHandler}>
 					<div class="slds-form-element slds-var-m-bottom_medium">
